--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
     <section class="container py-4 mt-4 bg-white rounded">
       <div class="pb-4">
         <h4 class="text-primary mb-3">Top players</h4>
-        <div class="row gy-3">
-          <div class="col-md-6 col-lg-4 d-flex align-items-center"><img width="56" class="me-3"
+        <div class="row gy-3 ">
+          <div class="col-6 col-md-4 col-lg-4 text-center text-md-center d-lg-flex align-items-center"><img width="56" class="me-3"
               src="images/players/player-1.png" alt="">
             <h4>Jony Sings</h4>
           </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-center"><img width="56" class="me-3"
+          <div class="col-6 col-md-4 col-lg-4 text-center text-md-center d-lg-flex align-items-center"><img width="56" class="me-3"
               src="images/players/player-2.png" alt="">
             <h4>Jony Sings</h4>
           </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-center"><img width="56" class="me-3"
+          <div class="col-6 col-md-4 col-lg-4 text-center text-md-center d-lg-flex align-items-center"><img width="56" class="me-3"
               src="images/players/player-3.png" alt="">
             <h4>Jony Sings</h4>
           </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-center"><img width="56" class="me-3"
+          <div class="col-6 col-md-4 col-lg-4 text-center text-md-center d-lg-flex align-items-center"><img width="56" class="me-3"
               src="images/players/player-4.png" alt="">
             <h4>Jony Sings</h4>
           </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-center"><img width="56" class="me-3"
+          <div class="col-6 col-md-4 col-lg-4 text-center text-md-center d-lg-flex align-items-center"><img width="56" class="me-3"
               src="images/players/player-5.png" alt="">
             <h4>Jony Sings</h4>
           </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-center"><img width="56" class="me-3"
+          <div class="col-6 col-md-4 col-lg-4 text-center text-md-center d-lg-flex align-items-center"><img width="56" class="me-3"
               src="images/players/player-6.png" alt="">
             <h4>Jony Sings</h4>
           </div>
@@ -78,47 +78,48 @@
       <hr class="mx-3" height="3" style="color: #4e4444;">
       <div>
         <h4 class="text-primary mb-3">Top players</h4>
-        <div class="row g-4">
-          <div class="col-md-12 col-lg-6 d-flex">
-            <div class="row">
-              <div class="col-12 col-lg-4"> <img width="177" src="images/blogs/blog-1.png" alt=""></div>
-              <div class="col-12 col-lg-6">
+        <div class="row gy-3">
+          <div class="col-md-6 col-lg-6 d-flex">
+            <div class="row gx-5">
+              <div class="col-6 col-md-6 col-lg-6"> <img  width="177" src="images/blogs/blog-1.png" alt=""></div>
+              <div class="col-4 col-md-4 col-lg-4 ms-2">
                 <h4>13 of My Favorite
                   UI/UX Goodies</h4>
                 <p>By <a class="text-decoration-none" href="#">Danny Sappio</a></p>
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-lg-6 d-flex">
+          <div class="col-md-6 col-lg-6 d-flex">
             <div class="row">
-              <div class="col-12 col-lg-4"> <img width="177" src="images/blogs/blog-2.png" alt=""></div>
-              <div class="col-12 col-lg-6">
+              <div class="col-6 col-md-6 col-lg-6"> <img width="177" src="images/blogs/blog-1.png" alt=""></div>
+              <div class="col-4 col-md-4 col-lg-4 ms-2 ">
                 <h4>13 of My Favorite
                   UI/UX Goodies</h4>
                 <p>By <a class="text-decoration-none" href="#">Danny Sappio</a></p>
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-lg-6 d-flex">
+          <div class="col-md-6 col-lg-6 d-flex">
             <div class="row">
-              <div class="col-12 col-lg-4"> <img width="177" src="images/blogs/blog-3.png" alt=""></div>
-              <div class="col-12 col-lg-6">
+              <div class="col-6 col-md-6 col-lg-6"> <img width="177" src="images/blogs/blog-1.png" alt=""></div>
+              <div class="col-4 col-md-4 col-lg-4 ms-2 ">
                 <h4>13 of My Favorite
                   UI/UX Goodies</h4>
                 <p>By <a class="text-decoration-none" href="#">Danny Sappio</a></p>
               </div>
             </div>
           </div>
-          <div class=" col-md-12 col-lg-6 d-flex">
+          <div class="col-md-6 col-lg-6 d-flex">
             <div class="row">
-              <div class="col-12 col-lg-4"> <img width="177" src="images/blogs/blog-4.png" alt=""></div>
-              <div class="col-12 col-lg-6">
+              <div class="col-6 col-md-6 col-lg-6"> <img width="177" src="images/blogs/blog-1.png" alt=""></div>
+              <div class="col-4 col-md-4 col-lg-4 ms-2">
                 <h4>13 of My Favorite
                   UI/UX Goodies</h4>
                 <p>By <a class="text-decoration-none" href="#">Danny Sappio</a></p>
               </div>
             </div>
           </div>
+       
         </div>
     </section>
     <section class="container my-4  bg-white border rounded">
